La til toString funksjonalitet og ryddet i imports.